Fix z-index with floating elements

--- a/src/styles/components/asciidoc/_listing.scss
+++ b/src/styles/components/asciidoc/_listing.scss
@@ -4,12 +4,18 @@
 	margin-top: 1em;
 	position: relative;
 
+	&:hover button.copy-btn {
+		opacity: 1;
+	}
+
 	button.copy-btn {
 		position: absolute;
 		right: 0.5em;
 		top: 0.5em;
 		cursor: pointer;
 		z-index: 10;
+		opacity: 0;
+		transition: opacity 200ms ease;
 
 		svg {
 			@include unselectable;
